[#14340] fix pipeline, don't use Java9 features (yet)